Cow is rendering

--- a/resources.cfg
+++ b/resources.cfg
@@ -1,7 +1,7 @@
 # Resource locations to be added to the default path
-#[General]
-#FileSystem=Media
-#FileSystem=Media/materials
-#FileSystem=Media/materials/scripts
-#FileSystem=Media/materials/textures
-#FileSystem=Media/models
+[General]
+FileSystem=resources
+FileSystem=resources/materials
+FileSystem=resources/materials/scripts
+FileSystem=resources/materials/textures
+FileSystem=resources/models
